--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
-  <script src="http://www.yanhuangxueyuan.com/versions/threejsR92/build/three.js"></script>
+  <script src="./src/utils/three.js"></script>
+  <script src="./src/utils/OrbitControls.js"></script>
+  
 </body>
 </html>
